Highlights in IDE

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=1531,540
+Pos=978,238
 Size=541,515
 Collapsed=0
 
@@ -22,19 +22,17 @@ Collapsed=0
 Pos=1339,19
 Size=561,881
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000002,0
 
 [Window][Scene Editor Window]
 Pos=459,19
 Size=878,472
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Entities List Window]
 Pos=0,19
 Size=457,881
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Entities]
 Pos=22,49
@@ -50,19 +48,18 @@ Collapsed=0
 Pos=459,493
 Size=878,407
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][DebugWindow]
 Pos=1393,244
 Size=169,117
 Collapsed=0
 
+[Window][Text Editor]
+Size=800,450
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1337,989 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=457,989 Selected=0xFE0D3B63
-    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=878,989 Split=Y Selected=0x44D9F559
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=711,472 CentralNode=1 Selected=0x44D9F559
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=711,407 Selected=0x1FC0499E
-  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=561,989 Selected=0xF58E28BB
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1337,881 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=561,881 Selected=0xF58E28BB
 
