--- a/imgui.ini
+++ b/imgui.ini
@@ -14,9 +14,9 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=978,238
-Size=541,515
-Collapsed=0
+Pos=1372,712
+Size=455,438
+Collapsed=1
 
 [Window][Inspector Window]
 Pos=1339,19
@@ -25,14 +25,16 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=459,19
-Size=878,472
+Pos=457,19
+Size=880,472
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Entities List Window]
 Pos=0,19
-Size=457,881
+Size=455,881
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Entities]
 Pos=22,49
@@ -40,14 +42,15 @@ Size=638,561
 Collapsed=0
 
 [Window][Appearance]
-Pos=1108,506
+Pos=498,704
 Size=728,158
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=459,493
-Size=878,407
+Pos=457,493
+Size=880,407
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][DebugWindow]
 Pos=1393,244
@@ -58,8 +61,17 @@ Collapsed=0
 Size=800,450
 Collapsed=0
 
+[Window][Create New Theme]
+Pos=69,44
+Size=1424,292
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=1337,881 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=561,881 Selected=0xF58E28BB
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=455,989 Selected=0xFE0D3B63
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1463,989 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1357,989 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1920,580 CentralNode=1 Selected=0x44D9F559
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1920,407 Selected=0x1FC0499E
+    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=561,989 Selected=0xF58E28BB
 
