--- a/imgui.ini
+++ b/imgui.ini
@@ -14,9 +14,9 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=1372,712
-Size=455,438
-Collapsed=1
+Pos=1085,221
+Size=455,652
+Collapsed=0
 
 [Window][Inspector Window]
 Pos=1339,19
@@ -42,7 +42,7 @@ Size=638,561
 Collapsed=0
 
 [Window][Appearance]
-Pos=498,704
+Pos=496,704
 Size=728,158
 Collapsed=0
 
@@ -62,8 +62,13 @@ Size=800,450
 Collapsed=0
 
 [Window][Create New Theme]
-Pos=69,44
+Pos=188,105
 Size=1424,292
+Collapsed=0
+
+[Window][File Explorer]
+Pos=1029,316
+Size=554,421
 Collapsed=0
 
 [Docking][Data]
