Solve thread race condition using Dekker's Alpgorithm

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,9 +14,10 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=1085,221
-Size=455,652
+Pos=899,493
+Size=438,407
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Inspector Window]
 Pos=1339,19
@@ -37,20 +38,20 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Entities]
-Pos=22,49
+Pos=48,38
 Size=638,561
 Collapsed=0
 
 [Window][Appearance]
-Pos=496,704
+Pos=1343,688
 Size=728,158
 Collapsed=0
 
 [Window][Assets Explorer]
 Pos=457,493
-Size=880,407
+Size=440,407
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,0
 
 [Window][DebugWindow]
 Pos=1393,244
@@ -72,11 +73,13 @@ Size=554,421
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=455,989 Selected=0xFE0D3B63
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1463,989 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1357,989 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1920,580 CentralNode=1 Selected=0x44D9F559
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1920,407 Selected=0x1FC0499E
-    DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=561,989 Selected=0xF58E28BB
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=455,989 Selected=0xFE0D3B63
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1463,989 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1357,989 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1920,580 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1920,407 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=440,407 Selected=0x1FC0499E
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=438,407 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=561,989 Selected=0xF58E28BB
 
