Small fixes and cleanup && New Entities List

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1900,881
+Size=1364,691
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,42 +14,42 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=899,493
-Size=438,407
+Pos=787,367
+Size=120,343
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector Window]
-Pos=1339,19
-Size=561,881
+Pos=909,19
+Size=455,691
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=457,19
-Size=880,472
+Pos=293,19
+Size=614,346
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Entities List Window]
 Pos=0,19
-Size=455,881
+Size=291,691
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Entities]
-Pos=48,38
+Pos=46,32
 Size=638,561
 Collapsed=0
 
 [Window][Appearance]
-Pos=1343,688
+Pos=663,688
 Size=728,158
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=457,493
-Size=440,407
+Pos=293,367
+Size=492,343
 Collapsed=0
 DockId=0x00000007,0
 
@@ -73,13 +73,13 @@ Size=554,421
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=455,989 Selected=0xFE0D3B63
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1463,989 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1357,989 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1920,580 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1920,407 Split=X Selected=0x1FC0499E
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=440,407 Selected=0x1FC0499E
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=438,407 Selected=0xF2B1FC4A
-    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=561,989 Selected=0xF58E28BB
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1364,691 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=907,691 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=291,691 Selected=0xFE0D3B63
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=614,691 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,346 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,343 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=492,343 Selected=0x1FC0499E
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=120,343 Selected=0xF2B1FC4A
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=455,691 Selected=0xF58E28BB
 
