--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1364,691
+Size=1900,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,42 +14,43 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=787,367
-Size=120,343
+Pos=862,476
+Size=488,424
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector Window]
-Pos=909,19
-Size=455,691
+Pos=1352,19
+Size=548,881
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=293,19
-Size=614,346
+Pos=399,19
+Size=951,455
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000009,0
 
 [Window][Entities List Window]
 Pos=0,19
-Size=291,691
+Size=397,881
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Entities]
-Pos=46,32
+Pos=42,32
 Size=638,561
 Collapsed=0
 
 [Window][Appearance]
-Pos=663,688
-Size=728,158
+Pos=399,342
+Size=951,32
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Assets Explorer]
-Pos=293,367
-Size=492,343
+Pos=399,476
+Size=461,424
 Collapsed=0
 DockId=0x00000007,0
 
@@ -63,7 +64,7 @@ Size=800,450
 Collapsed=0
 
 [Window][Create New Theme]
-Pos=188,105
+Pos=263,66
 Size=1424,292
 Collapsed=0
 
@@ -73,13 +74,15 @@ Size=554,421
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1364,691 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=907,691 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=291,691 Selected=0xFE0D3B63
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=614,691 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,346 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,343 Split=X Selected=0x1FC0499E
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=492,343 Selected=0x1FC0499E
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=120,343 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=455,691 Selected=0xF58E28BB
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1350,691 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=397,691 Selected=0xFE0D3B63
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=951,691 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,455 Split=Y Selected=0x44D9F559
+        DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=1150,396 CentralNode=1 Selected=0x44D9F559
+        DockNode  ID=0x0000000A Parent=0x00000005 SizeRef=1150,32 Selected=0xE2B8E647
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,424 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=461,451 Selected=0x1FC0499E
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=488,451 Selected=0xF2B1FC4A
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=548,691 Selected=0xF58E28BB
 
