--- a/project.json
+++ b/project.json
@@ -2,21 +2,21 @@
     {
         "color": {
             "a": 255,
-            "b": 58,
-            "g": 90,
-            "r": 172
+            "b": 0,
+            "g": 0,
+            "r": 255
         },
-        "model_path": "project/game/models/cube.obj",
-        "name": "ground",
+        "model_path": "",
+        "name": "Entity Name",
         "position": {
-            "x": 0.5999993085861206,
+            "x": 0.0,
             "y": 0.0,
             "z": 0.0
         },
         "scale": {
-            "x": 50.0,
-            "y": 0.009999999776482582,
-            "z": 50.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "script_path": ""
     }
