Hot fix + Hot Features Implement

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Debug##Default]
 Pos=312,285
-Size=131,138
+Size=370,138
 Collapsed=0
 
 [Window][Right Window]
@@ -14,31 +14,31 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=923,531
-Size=557,369
+Pos=1158,534
+Size=370,366
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector Window]
-Pos=1482,19
-Size=418,881
+Pos=1530,19
+Size=370,881
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=399,19
-Size=1081,510
+Pos=372,19
+Size=1156,513
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Entities List Window]
 Pos=0,19
-Size=397,881
+Size=370,881
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Entities]
-Pos=41,160
+Pos=45,164
 Size=638,443
 Collapsed=0
 
@@ -48,8 +48,8 @@ Size=351,234
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=399,531
-Size=522,369
+Pos=372,534
+Size=784,366
 Collapsed=0
 DockId=0x00000007,0
 
@@ -63,7 +63,7 @@ Size=800,450
 Collapsed=0
 
 [Window][Create New Theme]
-Pos=261,68
+Pos=258,68
 Size=1424,292
 Collapsed=0
 
@@ -72,14 +72,35 @@ Pos=1029,316
 Size=554,421
 Collapsed=0
 
+[Window][Texture Previewer]
+Pos=1203,132
+Size=794,794
+Collapsed=0
+
+[Window][HIII]
+Pos=372,19
+Size=1156,510
+Collapsed=0
+DockId=0x00000005,1
+
+[Window][Model Preview]
+Pos=-79,115
+Size=630,840
+Collapsed=0
+
+[Window][Model Previewer]
+Pos=1183,203
+Size=630,875
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1480,691 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=397,691 Selected=0xFE0D3B63
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1081,691 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,510 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,369 Split=X Selected=0x1FC0499E
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=522,451 Selected=0x1FC0499E
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=557,451 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=418,691 Selected=0xF58E28BB
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,691 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=370,691 Selected=0xFE0D3B63
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1156,691 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,621 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,366 Split=X Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=784,451 Selected=0x1FC0499E
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=370,451 Selected=0xF2B1FC4A
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,691 Selected=0xF58E28BB
 
