--- a/project.json
+++ b/project.json
@@ -2,11 +2,39 @@
     {
         "color": {
             "a": 255,
-            "b": 0,
-            "g": 0,
-            "r": 255
+            "b": 54,
+            "g": 162,
+            "r": 125
         },
         "id": "0",
+        "model_path": "project/game/models/cube.obj",
+        "name": "floor",
+        "position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 1.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "scale": {
+            "x": 45.0,
+            "y": 0.10000000149011612,
+            "z": 45.0
+        },
+        "script_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 0,
+            "g": 189,
+            "r": 61
+        },
+        "id": "1",
         "model_path": "assets/models/tree.obj",
         "name": "tree",
         "position": {
@@ -24,49 +52,23 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_path": ""
-    },
-    {
-        "color": {
-            "a": 255,
-            "b": 255,
-            "g": 255,
-            "r": 255
-        },
-        "id": "1",
-        "model_path": "project/game/models/cube.obj",
-        "name": "floor",
-        "position": {
-            "x": 0.0,
-            "y": -0.09999990463256836,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "scale": {
-            "x": 100.0,
-            "y": 0.10000000149011612,
-            "z": 100.0
-        },
-        "script_path": ""
+        "script_path": "",
+        "type": "entity"
     },
     {
         "color": {
             "a": 255,
             "b": 0,
-            "g": 225,
-            "r": 255
+            "g": 72,
+            "r": 189
         },
         "id": "2",
         "model_path": "project/game/models/test.obj",
         "name": "player",
         "position": {
-            "x": 10.90000057220459,
-            "y": 0.0,
-            "z": 0.0
+            "x": 9.40000057220459,
+            "y": 1.4000005722045898,
+            "z": 10.600000381469727
         },
         "relative_position": {
             "x": 0.0,
@@ -78,6 +80,66 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_path": "project/game/models/../hi.py"
+        "script_path": "project/game/hi.py",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 255,
+            "b": 255,
+            "g": 22,
+            "r": 0
+        },
+        "id": "3",
+        "model_path": "project/game/models/cube.obj",
+        "name": "box",
+        "position": {
+            "x": 0.0,
+            "y": 2.399998664855957,
+            "z": 4.899999141693115
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "scale": {
+            "x": 2.0,
+            "y": 3.0,
+            "z": 2.0
+        },
+        "script_path": "",
+        "type": "entity"
+    },
+    {
+        "color": {
+            "a": 1.0,
+            "b": 1.0,
+            "g": 1.0,
+            "r": 1.0
+        },
+        "direction": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 1.0
+        },
+        "id": "",
+        "name": "Light",
+        "position": {
+            "x": 4.0,
+            "y": 4.0,
+            "z": 4.0
+        },
+        "relative_position": {
+            "x": -7.613543478006832e+37,
+            "y": 0.0,
+            "z": 2.2865772290328494e+18
+        },
+        "target": {
+            "x": -8.009771867779675e+30,
+            "y": 4.5912142885138307e-41,
+            "z": 2.2865659590386647e+18
+        },
+        "type": "light"
     }
 ]
