--- a/project.json
+++ b/project.json
@@ -112,33 +112,37 @@
         "type": "entity"
     },
     {
+        "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 1.0,
             "b": 1.0,
             "g": 1.0,
             "r": 1.0
         },
+        "cutOff": 10.0,
         "direction": {
             "x": 0.0,
             "y": 0.0,
             "z": 1.0
         },
         "id": "",
-        "name": "Light",
+        "intensity": 1.3930000066757202,
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 4.0,
             "z": 4.0
         },
         "relative_position": {
+            "x": 2900.28125,
+            "y": 4.5914945482066956e-41,
+            "z": -6.1325536899884455e-15
+        },
+        "specularStrength": 0.44200000166893005,
+        "target": {
             "x": -7.613543478006832e+37,
             "y": 0.0,
-            "z": 2.2865772290328494e+18
-        },
-        "target": {
-            "x": -8.009771867779675e+30,
-            "y": 4.5912142885138307e-41,
-            "z": 2.2865659590386647e+18
+            "z": -5.621642050929491e-15
         },
         "type": "light"
     }
