--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "raylib"]
 	path = raylib
 	url = https://github.com/raysan5/raylib.git
+[submodule "ImNodes"]
+	path = ImNodes
+	url = https://github.com/rokups/ImNodes.git
