--- a/imgui.ini
+++ b/imgui.ini
@@ -73,9 +73,10 @@ Size=554,421
 Collapsed=0
 
 [Window][Texture Previewer]
-Pos=1203,132
-Size=794,794
+Pos=0,19
+Size=957,881
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][HIII]
 Pos=372,19
@@ -94,13 +95,15 @@ Size=630,875
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,691 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=370,691 Selected=0xFE0D3B63
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1156,691 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,621 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,366 Split=X Selected=0x1FC0499E
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,451 Selected=0x1FC0499E
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=784,451 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,691 Selected=0xF58E28BB
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1900,881 Split=X
+  DockNode          ID=0x00000009 Parent=0x8B93E3BD SizeRef=957,989 Selected=0x065A13DF
+  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=961,989 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=1528,691 Split=X
+      DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=370,691 Selected=0xFE0D3B63
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1156,691 Split=Y
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=706,621 CentralNode=1 Selected=0x44D9F559
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=706,366 Split=X Selected=0x1FC0499E
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=370,451 Selected=0x1FC0499E
+          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=784,451 Selected=0xF2B1FC4A
+    DockNode        ID=0x00000002 Parent=0x0000000A SizeRef=370,691 Selected=0xF58E28BB
 
