--- a/project.json
+++ b/project.json
@@ -2,13 +2,14 @@
     {
         "color": {
             "a": 255,
-            "b": 54,
-            "g": 162,
-            "r": 125
+            "b": 107,
+            "g": 161,
+            "r": 208
         },
         "id": 0,
-        "model_path": "project/game/models/cube.obj",
+        "model_path": "project/game/models/plane.obj",
         "name": "floor",
+        "normal_texture_path": "",
         "position": {
             "x": 0.0,
             "y": 0.0,
@@ -25,6 +26,7 @@
             "z": 45.0
         },
         "script_path": "",
+        "texture_path": "project/game/pbr/textures/brick_wall_02_disp_4k.png",
         "type": "entity"
     },
     {
@@ -37,6 +39,7 @@
         "id": 1,
         "model_path": "assets/models/tree.obj",
         "name": "tree",
+        "normal_texture_path": "",
         "position": {
             "x": 0.0,
             "y": 0.0,
@@ -53,6 +56,7 @@
             "z": 1.0
         },
         "script_path": "",
+        "texture_path": "",
         "type": "entity"
     },
     {
@@ -65,6 +69,7 @@
         "id": 2,
         "model_path": "project/game/models/test.obj",
         "name": "player",
+        "normal_texture_path": "",
         "position": {
             "x": 9.40000057220459,
             "y": 1.4000005722045898,
@@ -81,6 +86,7 @@
             "z": 1.0
         },
         "script_path": "project/game/hi.py",
+        "texture_path": "project/game/pbr/textures/brick_wall_02_disp_4k.png",
         "type": "entity"
     },
     {
@@ -93,6 +99,7 @@
         "id": 3,
         "model_path": "project/game/models/cube.obj",
         "name": "box",
+        "normal_texture_path": "",
         "position": {
             "x": 0.0,
             "y": 2.399998664855957,
@@ -109,24 +116,25 @@
             "z": 2.0
         },
         "script_path": "",
+        "texture_path": "",
         "type": "entity"
     },
     {
-        "attenuation": 9.999999747378752e-05,
+        "attenuation": 0.0,
         "color": {
             "a": 1.0,
-            "b": 1.0,
-            "g": 1.0,
+            "b": 0.0,
+            "g": 0.0,
             "r": 1.0
         },
         "cutOff": 10.0,
         "direction": {
-            "x": 0.0,
+            "x": -0.28600001335144043,
             "y": 0.0,
             "z": 1.0
         },
-        "id": 4,
-        "intensity": 1.3930000066757202,
+        "id": 0,
+        "intensity": 1.2999999523162842,
         "name": "",
         "position": {
             "x": 4.0,
@@ -134,15 +142,50 @@
             "z": 4.0
         },
         "relative_position": {
-            "x": 2900.28125,
-            "y": 4.5914945482066956e-41,
-            "z": -6.1325536899884455e-15
+            "x": -334659.0,
+            "y": 4.591354418360263e-41,
+            "z": 9.068714534540795e+28
         },
-        "specularStrength": 0.44200000166893005,
+        "specularStrength": 0.5,
         "target": {
             "x": -7.613543478006832e+37,
             "y": 0.0,
-            "z": -5.621642050929491e-15
+            "z": 7.932078701045934e+28
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 1.0,
+            "b": 0.0,
+            "g": 1.0,
+            "r": 1.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.30399999022483826,
+            "y": -0.41999998688697815,
+            "z": 0.15199999511241913
+        },
+        "id": 6,
+        "intensity": 0.5,
+        "name": "Light",
+        "position": {
+            "x": 4.0,
+            "y": 4.0,
+            "z": -6.499999523162842
+        },
+        "relative_position": {
+            "x": -5.8050351121982716e+28,
+            "y": 4.591354418360263e-41,
+            "z": 7.754687481100985e-22
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": 9.62863678509083e-22,
+            "y": 3.071926493492864e-41,
+            "z": 697.0
         },
         "type": "light"
     }
