Fixed some themes && Basic Normal mapping

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,9 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=953,781
+Pos=1881,881
 Size=370,32
-Collapsed=1
+Collapsed=0
 
 [Window][Right Window]
 Pos=487,411
@@ -14,8 +14,8 @@ Size=783,489
 Collapsed=0
 
 [Window][Code Editor Window]
-Pos=942,618
-Size=586,282
+Pos=942,609
+Size=586,291
 Collapsed=0
 DockId=0x00000008,0
 
@@ -27,7 +27,7 @@ DockId=0x00000004,0
 
 [Window][Scene Editor Window]
 Pos=371,56
-Size=1157,560
+Size=1157,551
 Collapsed=0
 DockId=0x00000005,0
 
@@ -38,18 +38,18 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Entities]
-Pos=38,165
+Pos=32,168
 Size=638,443
 Collapsed=0
 
 [Window][Appearance]
-Pos=239,284
+Pos=1083,221
 Size=370,234
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,618
-Size=569,282
+Pos=371,609
+Size=569,291
 Collapsed=0
 DockId=0x00000007,0
 
@@ -63,8 +63,8 @@ Size=800,450
 Collapsed=0
 
 [Window][Create New Theme]
-Pos=503,79
-Size=1424,292
+Pos=361,259
+Size=459,247
 Collapsed=0
 
 [Window][File Explorer]
@@ -73,8 +73,8 @@ Size=554,421
 Collapsed=0
 
 [Window][Texture Previewer]
-Pos=0,19
-Size=957,881
+Pos=0,35
+Size=370,40
 Collapsed=0
 
 [Window][HIII]
@@ -98,8 +98,8 @@ Size=1005,523
 Collapsed=0
 
 [Window][Material Node Editor]
-Pos=950,558
-Size=915,211
+Pos=951,345
+Size=915,424
 Collapsed=0
 
 [Window][ojji]
@@ -129,12 +129,12 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=1548,988 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=369,988 Selected=0xFE0D3B63
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1177,988 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=1177,560 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1177,421 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,844 Selected=0xFE0D3B63
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1548,988 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1177,551 Selected=0x44D9F559
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1177,291 Split=X
         DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=589,513 CentralNode=1 Selected=0x1FC0499E
         DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=586,513 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=370,988 Selected=0xF58E28BB
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=370,988 Selected=0xF58E28BB
 
