Reverting the reversion (pbr 1/3 && disable pbr because of shader bugs && added new way to create entities by dragging a model into the scene editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,137 +4,53 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1881,881
-Size=370,32
+Pos=1505,677
+Size=400,400
 Collapsed=0
 
-[Window][Right Window]
-Pos=487,411
-Size=783,489
+[Window][Assets Explorer]
+Pos=396,573
+Size=571,327
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Code Editor Window]
-Pos=942,609
-Size=586,291
+Pos=969,573
+Size=559,327
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
+
+[Window][Scene Objects List Window]
+Pos=0,56
+Size=394,844
+Collapsed=0
+DockId=0x00000003,0
 
 [Window][Inspector Window]
 Pos=1530,56
 Size=370,844
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Scene Editor Window]
-Pos=371,56
-Size=1157,551
+Pos=396,56
+Size=1132,515
 Collapsed=0
-DockId=0x00000005,0
-
-[Window][Entities List Window]
-Pos=0,56
-Size=369,844
-Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,0
 
 [Window][Entities]
-Pos=32,168
-Size=638,443
-Collapsed=0
-
-[Window][Appearance]
-Pos=1083,221
-Size=370,234
-Collapsed=0
-
-[Window][Assets Explorer]
-Pos=371,609
-Size=569,291
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][DebugWindow]
-Pos=1393,244
-Size=169,117
-Collapsed=0
-
-[Window][Text Editor]
-Size=800,450
-Collapsed=0
-
-[Window][Create New Theme]
-Pos=361,259
-Size=459,247
-Collapsed=0
-
-[Window][File Explorer]
-Pos=1106,320
-Size=554,421
-Collapsed=0
-
-[Window][Texture Previewer]
-Pos=0,35
-Size=370,40
-Collapsed=0
-
-[Window][HIII]
-Pos=372,19
-Size=1156,510
-Collapsed=0
-
-[Window][Model Preview]
-Pos=-79,115
-Size=630,840
-Collapsed=0
-
-[Window][Model Previewer]
-Pos=1183,203
-Size=630,875
-Collapsed=0
-
-[Window][ImNodes]
-Pos=78,386
-Size=1005,523
-Collapsed=0
-
-[Window][Material Node Editor]
-Pos=951,345
-Size=915,424
-Collapsed=0
-
-[Window][ojji]
-Pos=197,168
-Size=370,137
-Collapsed=0
-
-[Window][Quit Prompt]
-Pos=750,375
-Size=400,150
-Collapsed=0
-
-[Window][Are you sure you want to quit?]
-Pos=850,415
-Size=370,32
-Collapsed=0
-
-[Window][Do you want to quit?]
-Pos=850,415
-Size=370,70
-Collapsed=0
-
-[Window][Test]
 Pos=60,60
-Size=302,264
+Size=639,561
 Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,844 Selected=0xFE0D3B63
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=1548,988 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1177,551 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1177,291 Split=X
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=589,513 CentralNode=1 Selected=0x1FC0499E
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=586,513 Selected=0xF2B1FC4A
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=370,988 Selected=0xF58E28BB
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,844 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=394,844 Selected=0x0F5F40DF
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1504,844 Split=Y
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1900,515 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1900,327 Split=X
+        DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=374,138 Selected=0x1FC0499E
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=366,138 Selected=0xF2B1FC4A
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,844 Selected=0xF58E28BB
 
