--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1505,677
+Pos=1835,881
 Size=400,400
 Collapsed=0
 
@@ -39,8 +39,13 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Entities]
-Pos=60,60
+Pos=60,61
 Size=639,561
+Collapsed=0
+
+[Window][Material Node Editor]
+Pos=675,431
+Size=856,440
 Collapsed=0
 
 [Docking][Data]
