--- a/project.json
+++ b/project.json
@@ -6,9 +6,9 @@
             "g": 255,
             "r": 255
         },
-        "id": -1956862784,
+        "id": 1153742016,
         "model_path": "project/game/models/cube.obj",
-        "name": "Entity Name",
+        "name": "",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
@@ -28,15 +28,15 @@
         },
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.5,
+            "DiffuseIntensity": 2.5369999408721924,
             "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
+            "SpecularIntensity": 3.0929999351501465,
             "SpecularTint": {
-                "x": 1.0,
-                "y": 0.20000000298023224,
-                "z": 0.10000000149011612
+                "x": 0.10000002384185791,
+                "y": 1.0,
+                "z": 0.8019304275512695
             },
-            "shininess": 0.5
+            "shininess": 1.2410000562667847
         },
         "texture_path": "",
         "type": "entity"
@@ -65,9 +65,9 @@
             "z": 4.0
         },
         "relative_position": {
-            "x": -4.515398018167982e-20,
+            "x": 176067620896768.0,
             "y": 4.591634678053128e-41,
-            "z": -3.8953758080211497e-32
+            "z": 1426.3726806640625
         },
         "specularStrength": 0.5,
         "target": {
