--- a/exported_game/project.json
+++ b/exported_game/project.json
@@ -2,43 +2,55 @@
     {
         "color": {
             "a": 255,
-            "b": 58,
-            "g": 120,
-            "r": 126
+            "b": 255,
+            "g": 255,
+            "r": 255
         },
-        "id": 566080335,
-        "model_path": "assets/models/tree.obj",
-        "name": "tree 1",
+        "id": 1948505280,
+        "model_path": "project/game/models/cube.obj",
+        "name": "",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 19.199993133544922,
-            "z": 0.0
+            "y": 0.0,
+            "z": 3.59999942779541
         },
         "relative_position": {
             "x": 0.0,
             "y": 0.0,
             "z": 0.0
         },
+        "roughness_texture_path": "",
         "scale": {
-            "x": 2.0,
-            "y": 2.0,
-            "z": 2.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
         "texture_path": "",
         "type": "entity"
     },
     {
         "color": {
             "a": 255,
-            "b": 112,
-            "g": 152,
-            "r": 179
+            "b": 255,
+            "g": 255,
+            "r": 255
         },
-        "id": 566080336,
-        "model_path": "project/game/pbr/terrain/source/Rock_Terrain_SF.obj",
-        "name": "terrain",
+        "id": 1948505281,
+        "model_path": "project/game/models/tree.obj",
+        "name": "",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
@@ -50,13 +62,25 @@
             "y": 0.0,
             "z": 0.0
         },
+        "roughness_texture_path": "",
         "scale": {
-            "x": 10.0,
-            "y": 10.0,
-            "z": 10.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
-        "script_path": "",
-        "texture_path": "project/game/pbr/terrain/source/Rock_Terrain.png",
+        "script_path": "project/game/hi.py",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
         "type": "entity"
     },
     {
@@ -69,12 +93,13 @@
         },
         "cutOff": 10.0,
         "direction": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 1.0
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
         },
-        "id": 2,
+        "id": 3,
         "intensity": 0.5,
+        "light_type": 1,
         "name": "Light",
         "position": {
             "x": 4.0,
@@ -82,50 +107,15 @@
             "z": 4.0
         },
         "relative_position": {
-            "x": 6.260052740165914e+19,
-            "y": 4.5914945482066956e-41,
-            "z": 1.1610072365295485e-18
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 1.401298464324817e-45,
-            "z": 744.0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 1.0,
-            "b": 1.0,
-            "g": 1.0,
-            "r": 1.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": -0.32100000977516174,
-            "y": -0.7059999704360962,
-            "z": 0.04500000178813934
-        },
-        "id": 4,
-        "intensity": 0.5,
-        "name": "Light",
-        "position": {
-            "x": 4.0,
-            "y": 4.0,
-            "z": 4.0
-        },
-        "relative_position": {
-            "x": 6.260052740165914e+19,
-            "y": 4.5914945482066956e-41,
-            "z": 1.1610072365295485e-18
+            "x": 0.0585898756980896,
+            "y": 4.5912142885138307e-41,
+            "z": 4.609800981953688e+31
         },
         "specularStrength": 0.5,
         "target": {
             "x": 0.0,
             "y": 2.802596928649634e-45,
-            "z": 744.0
+            "z": 722.0
         },
         "type": "light"
     }
