New way to rename objects

--- a/imgui.ini
+++ b/imgui.ini
@@ -48,6 +48,11 @@ Pos=1060,88
 Size=856,440
 Collapsed=0
 
+[Window][Do you want to quit?]
+Pos=850,415
+Size=370,70
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1528,844 Split=X
